BACKEND: - Allow LOGIN only to active users - Add GET_ALL_USERS functionality - Add CHANGE_USER_STATUS functionality
